# scriptworker

./: .coveragerc  .dockerignore  .gitignore  .readthedocs.yml  .taskcluster.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  MANIFEST.in  README.md  README.rst  aki.py  config_example.json  cot_config_example.json  environment.yml  mypi.ini  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-docs.txt  requirements-prod.txt  requirements-test-dev.txt  requirements-test-prod.txt  requirements.txt  scriptworker.yaml.tmpl  setup.py  tempfile  tox.ini  version.json
.github/workflows/: pypi-publish.yml
docker/: Dockerfile.gnupg  Dockerfile.test  Dockerfile.test-py36  Dockerfile.test-py37  gnupg.yaml  run.sh
docs/: Makefile  chain_of_trust.md  chain_of_trust.rst  conf.py  cot_generate.rst  cot_gpg_key_mgmt.rst  cot_key_management.rst  cot_overview.md  cot_overview.rst  cot_testing.rst  cot_verify.rst  flow_of_control.md  flow_of_control.mm  index.rst  maintenance.md  modules.rst  new_instance.md  new_instance_types.md  overview.md  releases.md  scriptworker.rst
docs/_static/: chain-of-trust.json  chainOfTrust.json.asc
docs/source/: conf.py  index.rst
helper_scripts/: create_gpg_keys.py  gpg_helper.sh
requirements/: Dockerfile  base.in  base.py36.txt  base.txt  test.in  test.py36.txt  test.txt
scripts/: create_gpg_keys.py  gen_ed25519_key.py  pin-helper.sh  pin.sh  pip
scriptworker/: __init__.py  artifacts.py  azure.py  client.py  config.py  constants.py  context.py  cot.py  ed25519.py  exceptions.py  github.py  gpg.py  log.py  poll.py  script.py  task.py  task_process.py  utils.py  version.py  worker.py
scriptworker/cot/: generate.py  verify.py
scriptworker/data/: cot_config_schema.json  cot_v1_schema.json  firefox_cot_schema.json
scriptworker/monitoring/: nagios_file_age_check.py  nagios_pending_tasks.py
scriptworker/test/: __init__.py  test_artifacts.py  test_client.py  test_config.py  test_context.py  test_cot.py  test_cot_generate.py  test_cot_verify.py  test_ed25519.py  test_github.py  test_gpg.py  test_integration.py  test_log.py  test_poll.py  test_production.py  test_script.py  test_task.py  test_task_process.py  test_utils.py  test_version.py  test_worker.py
scriptworker/test/data/: check_pubkeys.py  client_credentials.json  cot_config_schema.json  gen1000keys.py  good.json  gpg.sh  no_creds.json  test_git_repo.tgz  verify_cot.py
scriptworker/test/data/cotv2/: actions.json  cotv4_relpro_context.json  cron.json  decision_hg-push.json
scriptworker/test/data/cotv3/: action_retrigger.json  actions.json  decision_try.json  pushlog.json
scriptworker/test/data/cotv4/: actions.json  broken_actions.json  decision_github_private.json  projects.yml  retrigger_context.json  (+1 more)
src/scriptworker/: __init__.py  artifacts.py  client.py  config.py  constants.py  context.py  ed25519.py  exceptions.py  github.py  log.py  task.py  task_process.py  utils.py  version.py  worker.py
src/scriptworker/cot/: __init__.py  generate.py  verify.py
src/scriptworker/data/: scriptworker_task_schema.json
taskcluster/: config.yml  requirements.txt
taskcluster/ci/docker-image/: kind.yml
taskcluster/ci/pr/: kind.yml
taskcluster/ci/tox/: kind.yml
taskcluster/docker/python/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/pr/: kind.yml
taskcluster/kinds/tox/: kind.yml
taskcluster/scriptworker_taskgraph/: __init__.py
taskcluster/scriptworker_taskgraph/transforms/: __init__.py  tox.py
tests/: __init__.py  bad.json  conftest.py  good.json  test_artifacts.py  test_client.py  test_config.py  test_context.py  test_cot.py  test_cot_generate.py  test_cot_verify.py  test_ed25519.py  test_github.py  test_integration.py  test_log.py  test_poll.py  test_production.py  test_task.py  test_task_process.py  test_utils.py  test_version.py  test_worker.py
tests/data/: azure.xml  basic_schema.json  basic_task.json  good.json  killed.py  long_running.py  no_creds.json  write_file.sh
tests/data/cotv2/: action_relpro.json  cotv4_relpro_template.json  cron.json  parameters.yml  projects.yml  pushlog.json
tests/data/cotv4/: action_github.json  action_relpro.json  action_retrigger.json  decision_github_private.json  decision_try.json  parameters.yml  pr_action_github.json  pr_action_retrigger.json  pr_action_retrigger_template.json  private_github_.taskcluster.yml  projects.yml  pushlog.json  retrigger_template.json
tests/data/ed25519/: docker-worker_private_key  docker-worker_public_key  foo.json.scriptworker.sig  generic-worker_private_key  generic-worker_public_key  scriptworker_private_key  scriptworker_public_key
(+65 files in other folders)
