[project]
name = "scriptworker"
version = "63.0.1"
description = "Taskcluster scriptworker"
authors = [
    { name = "Mozilla Release Engineering", email = "releng@mozilla.com" },
]
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3",
    "arrow>=1.0",
    "cryptography>=2.6.1",
    "dictdiffer",
    "github3.py",
    "immutabledict>=1.3.0",
    "jsonschema[format-nongpl]",
    "json-e>=2.5.0",
    "PyYAML",
    "taskcluster>=40",
    "taskcluster-taskgraph",
]

[dependency-groups]
docs = [
    "auxlib",
    "commonmark",
    "myst-parser",
    "recommonmark",
    "Sphinx",
    "sphinx_rtd_theme",
]
dev = [
    "tox",
    "tox-uv",
    "aiohttp>=3",
    "asyncio_extras",
    "coveralls",
    "ruff",
    "mock",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-random-order",
    "mypy",
    # For mypy stub discovery
    "aiohttp",
    "async_timeout",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "taskcluster",
    ".readthedocs.yml",
    ".taskcluster.yml",
    "CODE_OF_CONDUCT.md",
    "docs",
    "mypi.ini",
    "tests",
    ".github",
]

[tool.distutils.bdist_wheel]
universal = true

[project.scripts]
scriptworker = "scriptworker.worker:main"
verify_cot = "scriptworker.cot.verify:verify_cot_cmdln"
create_test_workdir = "scriptworker.cot.verify:create_test_workdir"
verify_ed25519_signature = "scriptworker.ed25519:verify_ed25519_signature_cmdln"

[tool.ruff]
line-length = 160
target-version = "py311"
extend-exclude = [
    "docs"
]

[tool.ruff.lint]
# F = pyflakes, E/W = pycodestyle, I = isort, D = pydocstyle
select = ["F", "E", "W", "I", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"tests/test_github.py" = ["D", "E501"]  # ignore long lines in test_github.py


[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
asyncio_mode = "auto"
